# valifold

./: .gitignore  LICENSE.md  README.md  pyproject.toml
.github/workflows/: integration.yml  release.yml  tests.yml  unit_tests.yml
src/: errors.py  functions.py  pattern.py  validators.py
src/valifold/: dsl.py  errors.py  pattern.py  validators.py
tests/: test_errors.py  test_patterns.py  test_patterns_2.py  test_to_fail.py  test_validators.py  test_validators_2.py  test_validators_extended.py  test_validators_final.py  test_xor_optional_edge_case.py
