[build-system]
requires = ["setuptools >= 77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "valifold"
version = "0.1.2"
authors = [
    { name = "Igor Djachenko" },
]
description = "A Python library for validating file and folder structures with a fluent DSL"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Filesystems",
    "Topic :: Utilities",
    "Typing :: Typed"
]
license = { text = "MIT" }

[project.urls]
homepage = "https://github.com/djachenko/valifold"
source = "https://github.com/djachenko/valifold"
documentation = "https://github.com/djachenko/valifold#readme"
issues = "https://github.com/djachenko/valifold/issues"


[project.optional-dependencies]
test = [
    "pytest >= 9.0",
    "ruff >= 0.15",
    "mypy >= 1.19",
    "pytest-cov >= 7.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest]
testpaths = [
    "tests",
]
markers = [
    "slow: marks tests as slow",
    "edge_case: marks tests as edge cases tests"
]
addopts = [
    "-m", "not slow"
]

[tool.bumpversion]
current_version = "0.1.2"
commit = true
tag = true
tag_name = "v{new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = "version = \"{current_version}\""
replace = "version = \"{new_version}\""